[gd_scene load_steps=14 format=2]

[ext_resource path="res://characters/character.gd" type="Script" id=1]
[ext_resource path="res://characters/hpbar.theme" type="Theme" id=2]
[ext_resource path="res://characters/attack_alerts/circle.png" type="Texture" id=3]
[ext_resource path="res://sounds/sound_effects/start_hitting.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/sound_effects/blank_hit.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/sound_effects/damage.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/sound_effects/death.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/sound_effects/healing.wav" type="AudioStream" id=8]
[ext_resource path="res://characters/heal_particle.png" type="Texture" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -48, -24, 24, 24, 24 )

[sub_resource type="CircleShape2D" id=2]
radius = 48.0

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("polygon:polygon")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ PoolVector2Array( 0, -48, -24, 24, 24, 24, 0, -48 ), PoolVector2Array( -2, -48, -2, 24, 2, 24, 2, -48 ), PoolVector2Array( -2, -48, -2, 24, 2, 24, 2, -48 ), PoolVector2Array( -2, -12, -2, -12, 2, -12, 2, -12 ) ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="character" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="polygon" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, -48, -24, 24, 24, 24, 0, -48 )

[node name="hit_distance" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_distance"]
position = Vector2( 0, -36 )
shape = SubResource( 2 )

[node name="hpbar_holder" type="Node2D" parent="."]
z_index = 10

[node name="hpbar" type="ProgressBar" parent="hpbar_holder"]
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = -34.0
rect_pivot_offset = Vector2( 48, 48 )
theme = ExtResource( 2 )
max_value = 1.0
value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tween" type="Tween" parent="."]

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/death = SubResource( 3 )

[node name="attack_delay_timer" type="Timer" parent="."]
one_shot = true

[node name="attack_alert_timer" type="Timer" parent="."]
one_shot = true

[node name="stun_timer" type="Timer" parent="."]
one_shot = true

[node name="death_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="attack_alert" type="Light2D" parent="."]
position = Vector2( 0, -36 )
enabled = false
texture = ExtResource( 3 )
texture_scale = 0.25
color = Color( 1, 0.498039, 0, 1 )
energy = 0.0
shadow_enabled = true

[node name="particles" type="Node2D" parent="."]

[node name="heal" type="CPUParticles2D" parent="particles"]
emitting = false
amount = 3
one_shot = true
explosiveness = 1.0
local_coords = false
texture = ExtResource( 9 )
emission_shape = 1
emission_sphere_radius = 50.0
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.2
damping = 100.0
scale_amount = 10.0
color_ramp = SubResource( 4 )

[node name="hit" type="CPUParticles2D" parent="particles"]
emitting = false
amount = 4
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.8
damping = 100.0
angle = 360.0
angle_random = 1.0
scale_amount = 10.0
color_ramp = SubResource( 4 )

[node name="death" type="CPUParticles2D" parent="particles"]
position = Vector2( 0, -12 )
emitting = false
lifetime = 4.0
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.8
damping = 100.0
angle = 360.0
angle_random = 1.0
scale_amount = 10.0
color_ramp = SubResource( 4 )

[node name="audio" type="Node2D" parent="."]

[node name="start_hitting" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource( 4 )
max_distance = 10000.0
bus = "sound_effects"

[node name="blank_hit" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource( 5 )
max_distance = 10000.0
bus = "sound_effects"

[node name="damage" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource( 6 )
max_distance = 10000.0
bus = "sound_effects"

[node name="death" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource( 7 )
max_distance = 10000.0
bus = "sound_effects"

[node name="healing" type="AudioStreamPlayer2D" parent="audio"]
stream = ExtResource( 8 )
max_distance = 10000.0
bus = "sound_effects"
[connection signal="body_entered" from="hit_distance" to="." method="_on_hit_distance_body_entered"]
[connection signal="body_exited" from="hit_distance" to="." method="_on_hit_distance_body_exited"]
[connection signal="tween_completed" from="tween" to="." method="_on_tween_tween_completed"]
[connection signal="animation_finished" from="animation_player" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="attack_delay_timer" to="." method="_on_attack_delay_timer_timeout"]
[connection signal="timeout" from="attack_alert_timer" to="." method="_on_attack_alert_timer_timeout"]
[connection signal="timeout" from="stun_timer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
